# llm-framework-showdown

./: .gitignore  README.md  eval_apps.py  generate_apps.py  index.html  index.qmd  pyproject.toml  requirements.txt  verify_html.py
dash/: app.py  eval_report.md
eval_pipeline/: __init__.py  __main__.py  chat_generate.py  config.py  gate3_inspect.py  gates.py  prompts.py  runner.py  specs.py
panel/: app.py  eval_report.md
shiny/: app.py  eval_report.md
streamlit/: app.py  eval_report.md
tests/: test_eval_pipeline.py
