[project]
name = "llm-framework-showdown"
version = "0.1.0"
description = "Python evaluation pipeline that generates web apps across 5 frameworks using AWS Bedrock Anthropic models"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "chatlas[bedrock-anthropic]",
    "chatlas[eval]",
    "inspect-ai",
    "pydantic>=2.5",
    "httpx>=0.26",
    "playwright>=1.41",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["eval_pipeline"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
